# sm-gd

./: Cargo.toml  README.md
.github/workflows/: check-and-lint.yml
examples/spinning-cube/: Cargo.toml  project.godot  spinning-cube.gdnlib
examples/spinning-cube/native/: Cube.gdns
examples/spinning-cube/resources/: CubeResource.tres
examples/spinning-cube/scenes/: Main.tscn
examples/spinning-cube/src/: cube.rs  lib.rs  machine.rs  resource.rs
examples/spinning-cube/src/states/: idle.rs  mod.rs  spinning.rs
src/: lib.rs
